# DeepWavNN

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  readme.mkd  run_experiments.py
WavPool/data_generators/: __init__.py  cifar_generator.py  fashion_mnist_generator.py  mnist_generator.py
WavPool/models/: __init__.py  wavMLP.py  wavelet_layer.py  wavpool.py
WavPool/training/: finetune_network.py  plot_results.py  train_model.py  training_metrics.py
figures/: file.txt
notebooks/: inference.ipynb  mnist_wav.ipynb  optimizer_mnist.ipynb  results_visuals.ipynb  variance_test_fashion_mnist.ipynb  variance_test_mnist.ipynb  variance_test_mnist.py.ipynb  wavNN_sigma_test.py.ipynb  wavpool_inference.ipynb
results/naive_params/VanillaCNN_CIFARGenerator_2023-04-14/: experiment_config.json  history.json  parameter_history.json
results/naive_params/VanillaCNN_FashionMNISTGenerator_2023-04-14/: experiment_config.json  history.json  parameter_history.json
results/naive_params/VanillaCNN_MNISTGenerator_2023-04-14/: experiment_config.json  history.json  parameter_history.json
results/wavpool_inference_CIFAR/: history.csv  model.pt
results/wavpool_inference_FashionMNIST/: history.csv  model.pt
results/wavpool_inference__MNIST/: history.csv  model.pt
src/scripts/: evaluate.py  train.py
src/tex/: bib.bib  ms.tex
tests/: test.py  test_generator.py  test_voting_wavnn.py  test_wav_cnn.py  test_wav_mlp.py
wavNN/: finetune_network.py  train_model.py
wavNN/data/: nmist_generator.py
wavNN/data_generators/: __init__.py  cifar_generator.py  data_generator.py  fashion_mnist_generator.py  mnist_generator.py
wavNN/models/: __init__.py  pooling_wav.py  vanillaCNN.py  vanillaMLP.py  voting_wavMLP.py  wavCNN.py  wavMLP.py  wavelet_layer.py  wavpool.py
wavNN/training/: finetune_network.py  plot_results.py  train_model.py  training_metrics.py
wavNN/utils/: levels.py  voting.py
wavpool/data_generators/: __init__.py  cifar_generator.py  fashion_mnist_generator.py  mnist_generator.py
wavpool/models/: __init__.py  wavMLP.py  wavelet_layer.py  wavpool.py
wavpool/training/: finetune_network.py  plot_results.py  train_model.py
(+85 files in other folders)
